app/eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weshare-api-service
spec:
  selector:
    app: weshare-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
