app/eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weshare-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "app.weshareapi.com"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: weshare-api-service
                port:
                  number: 80
# - kubectl apply -f eks/ingress.yaml
# - kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.6.4/deploy/static/provider/aws/deploy.yaml
